--- a/event_create.html
+++ b/event_create.html
@@ -198,7 +198,7 @@
                     <textarea id="id_event_public_description" name="event_public_description">
 Protest at a Verizon store against the rollback of net neutrality protections.
 
-Join other Team Internet members at the protest. Internet users outraged by top Verizon lawyer turned FCC Chairman Ajit Pai’s plan to gut net neutrality are planning to protest at Verizon retail stores across the country on Thursday, December 7th, one week before an expected vote at the FCC. Protesters will make it clear to members of Congress that the time is now to stand for net neutrality, not Verizon’s bottom line.
+Join other Team Internet members at the protest. Internet users outraged by top Verizon lawyer turned FCC Chairman Ajit Pai’s plan to gut net neutrality are planning to protest at Verizon retail stores across the country on Thursday, December 7th, one week before an expected vote at the FCC. Protesters will make it clear to members of Congress that the time is now to stand for net neutrality, not Verizon’s bottom line. <span style='color: red'>And please remember, this event is about protesting actions of Verizon executives, lobbyists and their supporters in Washington, not the employees at these stores.</span>
                     </textarea>
                 </div>
 
