--- a/event_create.html
+++ b/event_create.html
@@ -128,9 +128,12 @@
 
             <div id="event-info">
                 <h3>Tell us where your protest is so others can join you!</h3>
-                <div>This will be publicly visible</div>
-                <p>
-                <div>Find a Verizon store close to you, and input the address -- be sure to pick a location that’s central, has good visibility, is easy to get to and near public transportation.</div>
+                <p><a href='https://www.verizonwireless.com/stores'>Click here</a> to find a Verizon Wireless store near you. Do not select an authorized retailer (identified by a blue icon) for your protest location. Your protest will ONLY be approved if it’s at a Verizon Wireless store identified by a red icon here.</p>
+
+                <p>If there is no Verizon Wireless store near you, protest at your <a href='https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0'>member of Congress’s local office.</a></p>
+
+                <p>Be sure to pick a location that’s central, has good visibility, is easy to get to and/or near public transportation.</p>
+
                 <div class="unknown_user">
                     <!--
                         This only shows if the user form includes all of the
