Open links in new windows

--- a/event_create.html
+++ b/event_create.html
@@ -128,9 +128,9 @@
 
             <div id="event-info">
                 <h3>Tell us where your protest is so others can join you!</h3>
-                <p><a href='https://www.verizonwireless.com/stores'>Click here</a> to find a Verizon Wireless store near you. Do not select an authorized retailer (identified by a blue icon) for your protest location. Your protest will ONLY be approved if it’s at a Verizon Wireless store identified by a red icon here.</p>
+                <p><a href='https://www.verizonwireless.com/stores' target="_blank">Click here</a> to find a Verizon Wireless store near you. Do not select an authorized retailer (identified by a blue icon) for your protest location. Your protest will ONLY be approved if it’s at a Verizon Wireless store identified by a red icon here.</p>
 
-                <p>If there is no Verizon Wireless store near you, protest at your <a href='https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0'>member of Congress’s local office.</a></p>
+                <p>If there is no Verizon Wireless store near you, protest at your <a href='https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0' target="_blank">member of Congress’s local office.</a></p>
 
                 <p>Be sure to pick a location that’s central, has good visibility, is easy to get to and/or near public transportation.</p>
 
