Added language to clarify event can not be at a mall

--- a/event_create.html
+++ b/event_create.html
@@ -130,7 +130,7 @@
 
             <div id="event-info">
                 <h3>Tell us where your protest is so others can join you!</h3>
-                <p><a href='https://www.verizonwireless.com/stores' target="_blank">Click here</a> to find a Verizon Wireless store near you. Do not select an authorized retailer (identified by a blue icon) for your protest location. Your protest will ONLY be approved if it’s at a Verizon Wireless store identified by a red icon <a href='https://www.verizonwireless.com/stores' target="_blank">here</a>.</p>
+                <p><a href='https://www.verizonwireless.com/stores' target="_blank">Click here</a> to find a Verizon Wireless store near you. Do not select an authorized retailer (identified by a blue icon) for your protest location. Your protest will ONLY be approved if it’s at a Verizon Wireless store identified by a red icon <a href='https://www.verizonwireless.com/stores' target="_blank">here</a>. Also, your event will not be approved if it is in a mall, as malls tend to be private property.</p>
 
                 <p>Be sure to pick a location that’s central, has good visibility, is easy to get to and/or near public transportation.</p>
 
