Check cohost object.

--- a/event_search_results.html
+++ b/event_search_results.html
@@ -83,7 +83,8 @@
 {% endif %}
 <div style="margin-bottom: 20px;">
 <strong>Host:</strong>
-<div>{{ event.obj.creator }}</div>
+{% if cohosts %}
+<div>{{ cohosts }}</div>
 </div>
 
 {% include "event_custom_field_categories.html" %}
