Add end if statement.

--- a/event_search_results.html
+++ b/event_search_results.html
@@ -85,6 +85,7 @@
 <strong>Host:</strong>
 {% if cohosts %}
 <div>{{ cohosts }}</div>
+{% endif %}
 </div>
 
 {% include "event_custom_field_categories.html" %}
