--- a/event_search_results.html
+++ b/event_search_results.html
@@ -83,9 +83,11 @@
 {% endif %}
 <div style="margin-bottom: 20px;">
 <strong>Host:</strong>
-{% if cohosts %}
-<div>{{ cohosts }}</div>
-{% endif %}
+<div>{{ event.obj.creator }}</div>
+</div>
+
+<strong>Test:</strong>
+<div>{{ event.obj }}</div>
 </div>
 
 {% include "event_custom_field_categories.html" %}
