Attempt remove host last name.

--- a/event_search_results.html
+++ b/event_search_results.html
@@ -90,7 +90,11 @@
 <p>
 {{ event.title }} hosts include:
 {% for host in event.obj.host_signups %}
+{% if host.users !== 'Team Internet' %}
+{{ host.user.split(" ",1)[0] }}
+{% else %}
 {{ host.user }}
+{% endif %}
 {% endfor %}
 </p>
 
