--- a/event_search_results.html
+++ b/event_search_results.html
@@ -92,9 +92,8 @@
 {% for host in event.obj.host_signups %}
   {% ifnotequal host.users "Team Internet" %}
     <strong>Host:</strong> <div>{{ host.user }}</div>
-  {% else %}
+  {% endifnotequal %}
     <strong>Team Internet: </strong><div>{{ host.user }}</div>
-  {% ifnotequal %}
 {% endfor %}
 </p>
 
