--- a/event_search_results.html
+++ b/event_search_results.html
@@ -84,7 +84,7 @@
 <div style="margin-bottom: 20px;">
 <strong>Host:</strong>
   <div>
-    print(event.obj.all())
+    print("hello")
     <!-- {% for host in event.obj.host_signups %}
       {{ host.all() }}
     {% endfor %} -->
