Add div to host name.

--- a/event_search_results.html
+++ b/event_search_results.html
@@ -85,7 +85,7 @@
 <strong>Host:</strong>
   <div>
     {% for host in event.obj.host_signups %}
-      {{ host.user }}
+      <div>{{ host.user }}</div>
     {% endfor %}
   </div>
 </div>
