--- a/event_search_results.html
+++ b/event_search_results.html
@@ -91,6 +91,11 @@
     {% endfor %}
   </div>
 </div>
+{% if {{ request.path }} == '/event/team-internet/2141' %}
+  Test path: {{ request.path }}
+  {% else %}
+  Other path: {{}}
+{% endif %}
 {{request.path}}
 
 <p>
