Testing request.path with if statement, fix typo.

--- a/event_search_results.html
+++ b/event_search_results.html
@@ -94,9 +94,8 @@
 {% if {{ request.path }} == '/event/team-internet/2141' %}
   Test path: {{ request.path }}
   {% else %}
-  Other path: {{}}
+  Other path: {{ request.path }}
 {% endif %}
-{{request.path}}
 
 <p>
 
