--- a/event_search_results.html
+++ b/event_search_results.html
@@ -91,7 +91,7 @@
     {% endfor %}
   </div>
 </div>
-{% if {{ request.path }} == "/event/team-internet/2141" %}
+{% if request.path == "/event/team-internet/2141" %}
   Test path: {{ request.path }}
   {% else %}
   Other path: {{ request.path }}
