Add if statement to host user loop, fix user typo.

--- a/event_search_results.html
+++ b/event_search_results.html
@@ -87,7 +87,7 @@
 <strong>Host:</strong>
   <div>
     {% for host in event.obj.host_signups %}
-      {% if host.users != “Team Internet" %}
+      {% if host.user != “Team Internet" %}
       <div>{{ host.user|truncatewords:1|cut:"..." }}</div>
       {% endif %}
     {% endfor %}
