--- a/event_attend.html
+++ b/event_attend.html
@@ -106,7 +106,6 @@
 <div class="thanks-share-twitter"><a class="buttonA3 icon-twitter" href="https://twitter.com/home?status=Join%20me%20for%20a%20Team%20Internet%20Event%20in%20{{ event.city_etc_no_postal }}%20https%3A//act.demandprogress.org/event/{{campaign.local_name}}/{{event.id}}/signup/?source=twshare" target="_blank"><span class="box"><span class="icon"></span>Share on Twitter</a></span></div>
 	</div>
   {% if request.path == "/event/team-internet/2141" %}
-    Test path: {{ request.path }}
     <div class="event-comment">
       <div class="subA">Comment here to connect with other attendees and plan your protest!</div>
         <form id="form" action="javascript:void('');" class="add_comment">
@@ -186,6 +185,7 @@ $( function () {
         });
     }
 } );
+console.log('jquery works', $)
 </script>
 
 {% endblock %}
