--- a/event_attend.html
+++ b/event_attend.html
@@ -108,7 +108,7 @@
   {% if request.path == "/event/team-internet/2141" %}
     <div class="event-comment">
       <div class="subA">Comment here to connect with other attendees and plan your protest!</div>
-        <form id="form" action="javascript:void('');" class="add_comment">
+        <form id="add_Comment" action="javascript:void('');">
           <label>Name
             <input id="name" type="string" name="name">
           </label><br>
