--- a/event_attend.html
+++ b/event_attend.html
@@ -185,7 +185,8 @@ $( function () {
         });
     }
 } );
-$(.comment-submit).on('click', function(){
+$(".comment-submit").on('click', function(){
+  console.log(have_events)
   console.log(this works!)
 })
 </script>
