Change on click event class from double to single quote.

--- a/event_attend.html
+++ b/event_attend.html
@@ -185,7 +185,7 @@ $( function () {
         });
     }
 } );
-$(".comment-submit").on('click', function(){
+$('.comment-submit').on('click', function(){
   console.log(have_events)
   console.log(this works!)
 })
