--- a/event_attend.html
+++ b/event_attend.html
@@ -187,7 +187,7 @@ $( function () {
 } );
 $('.comment-submit').on('click', function(){
   console.log(have_events)
-  console.log(this works!)
+  console.log('this works!')
 })
 </script>
 
