--- a/event_attend.html
+++ b/event_attend.html
@@ -154,6 +154,7 @@
 </form>
 {% if request.path == "/event/team-internet/2141" %}
 <div class="ak-grid-row">
+  <div class="ak-grid-col ak-grid-col-6-of-12"></div>
   <div class="ak-grid-col ak-grid-col-6-of-12">
     <div class="event-comment">
     <div class="subA">Comment here to connect with other attendees and plan your protest!</div>
