Add style to comment box.

--- a/event_attend.html
+++ b/event_attend.html
@@ -166,7 +166,7 @@
           <input id="email" type="string" name="email">
         </label><br>
         <label>Comment
-         <textarea id="comment" name="comment"></textarea>
+         <textarea id="comment" name="comment" style="width: 478px; height: 120px;"></textarea>
         </label>
         <button class="comment-submit">Add Comment</button>
       </form>
