Add on click function.

--- a/event_attend.html
+++ b/event_attend.html
@@ -182,7 +182,7 @@
 
 <script type="text/javascript">
 
-$("#add_comment").on("click", function() {
+$(".comment-submit").on("click", function() {
   console.log("I work!")
 })
 $( function () {
