Add disqus before body tag.

--- a/wrapper.html
+++ b/wrapper.html
@@ -153,5 +153,8 @@
 	$('label[for="id_mobile_phone"]').html('Phone number*');
 	});
 	</script>
+  {% if request.path == "/event/team-internet/2141" %}
+  <script id="dsq-count-scr" src="//battleforthenet.disqus.com/count.js" async></script>
+  {% endif %}
 </body>
 </html>
