--- a/event_attend.html
+++ b/event_attend.html
@@ -152,7 +152,7 @@
     {% endif %}
 
 </form>
-{% if request.path == "/event/team-internet/2141" %}
+{% if request.path == "/event/team-internet/2141" or request.path == "/event/team-internet/1374" %}
 <div class="ak-grid-row">
   <div class="ak-grid-col ak-grid-col-6-of-12">
     <div id="posted_comments"></div>
