Added title to comment section.

--- a/event_attend.html
+++ b/event_attend.html
@@ -159,7 +159,7 @@
   </div>
   <div class="ak-grid-col ak-grid-col-6-of-12">
     <div class="event-comment">
-      <div id="disqus_thread"></div>
+      <div id="disqus_thread">Comment here to connect with other attendees and plan your protest!</div>
   <script>
 
   /**
