Fix DISQUS initialization

--- a/event_attend.html
+++ b/event_attend.html
@@ -111,21 +111,6 @@
                   <div class="subA" style="padding-top: 20px">Comment here to connect with other attendees and plan your protest!</div>
                     <div class="event-comment">
                     <div id="disqus_thread"></div>
-                      <script>
-                      /**
-                      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-                      var disqus_config = function () {
-                       this.page.url = "{{request.path}}";  // Replace PAGE_URL with your page's canonical URL variable
-                       this.page.identifier = "{{event.id}}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-                      };
-                      (function() { // DON'T EDIT BELOW THIS LINE
-                      var d = document, s = d.createElement('script');
-                      s.src = 'https://battleforthenet.disqus.com/embed.js';
-                      s.setAttribute('data-timestamp', +new Date());
-                      (d.head || d.body).appendChild(s);
-                      })();
-                      </script>
                       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
                     </div>
                   </div>
@@ -184,14 +169,26 @@
 <script type="text/javascript">
 $( function () {
     var have_events = $('#id_have_events').val();
+    var args = actionkit.utils.getArgs();
     if ( ! have_events ) {
-        var args = actionkit.utils.getArgs();
+
         actionkit.forms.eventSearch(null, {
             event_id: args.event_id,
             zip: args.zip,
             page: $('#id_page').val()
         });
     }
+
+    var disqus_config = function () {
+        this.page.url = window.location.pathname;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = args.event_id; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://battleforthenet.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
 } );
 </script>
 
