--- a/event_search_results.html
+++ b/event_search_results.html
@@ -94,11 +94,11 @@
 {% if request.path == "/event/team-internet/1374" %}
   Test path: {{ request.path }}
   {% for host in event.obj.host_signups %}
-    {%  if host.user != "Team Internet"%}
-      <div>{{ host.user|truncatewords:1|cut:"..." }}</div>
+    {%  if host.user == "Team Internet" %}
+        {{ host.user }}
       {% else %}
-      outside of if: {{ host.user }}
-    {% endif %}  
+      outside of if: <div>{{ host.user|truncatewords:1|cut:"..." }}</div>
+    {% endif %}
   {% endfor %}
 {% endif %}
 
