Added 3-pager link to post RSVP page

--- a/event_attendee_details.html
+++ b/event_attendee_details.html
@@ -60,6 +60,10 @@
     {% endif %}
     </div> <!-- .ak-event-table -->
 
+    <p class="ak-event-title">
+        <a target="_blank" href="https://docs.google.com/document/d/1Q1McrV-dE0YtdHMYRmyYe_rgCvc1uJfbXq1SGEtvpGU/edit?usp=sharing">Three-Page Guide for Executing a Dec. 7th Net Neutrality Protest.</a>
+    </p>
+
     {% if event.public_description %}
         <div class="ak-event-description">
 		<div class="subB">Description:</div>
