Test request path.

--- a/event_search_results.html
+++ b/event_search_results.html
@@ -75,6 +75,7 @@
 </div>
 {% endif %}
 
+{{request.path}}
 {% if request.path == "/event/team-internet/2141" %}
  Does this work?
   {% if event.attendee_count %}
